--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -4,7 +4,7 @@
 }
 
 .skills-header {
-  font-size: 60px;
+  font-size: 3.75rem;
   line-height: normal;
   font-family: "Google Sans Regular";
   text-align: center;
@@ -31,7 +31,7 @@
 }
 
 .skills-heading {
-  font-size: 56px;
+  font-size: 2.5rem;
   font-weight: 400;
   font-family: "Google Sans Regular";
   line-height: normal;
@@ -40,10 +40,10 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .skills-heading {
-    font-size: 40px;
+    font-size: 2rem;
   }
   .skills-header {
-    font-size: 50px;
+    font-size: 2.8rem;
   }
   /* .skills-image-div > img {
     margin-top: 0px;
