--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,9 @@ body {
   font: 19px / 23px Montserrat, "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #111;
 }
+
 /* Media Query */
 @media (max-width: 1380px) {
   html,
