--- a/src/components/competitiveSites/CompetitiveSites.css
+++ b/src/components/competitiveSites/CompetitiveSites.css
@@ -9,8 +9,8 @@
 
 .competitive-sites-inline {
   display: inline-block;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: 1.25rem;
+  margin-bottom: 1.25rem;
   font-family: "Google Sans Regular";
 }
 
