--- a/src/containers/opensourceCharts/OpensourceCharts.css
+++ b/src/containers/opensourceCharts/OpensourceCharts.css
@@ -1,10 +1,10 @@
 .os-charts-header {
-  font-size: 40px;
+  font-size: 2.5rem;
   line-height: 1.1;
   font-family: "Google Sans Regular";
   text-align: center;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
 }
 
 .os-charts-body-div {
@@ -21,13 +21,13 @@
 
 @media (max-width: 1380px) {
   .os-charts-header {
-    font-size: 35px;
+    font-size: 2.1875rem;
   }
 }
 
 @media (max-width: 768px) {
   .os-charts-header {
-    font-size: 25px;
+    font-size: 1.5625rem;
   }
 
   .os-charts-body-div {
