--- a/src/components/blogCard/BlogCard.css
+++ b/src/components/blogCard/BlogCard.css
@@ -8,15 +8,15 @@
 }
 
 .square {
-  width: 440px;
-  height: 430px;
+  width: 27.5rem;
+  height: 26.875rem;
   background: white;
   border-radius: 4px;
-  box-shadow: 0px 20px 50px #d9dbdf;
+  box-shadow: 0px 1.25rem 3.125rem #d9dbdf;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .mask {
@@ -26,15 +26,15 @@
 }
 
 .blog-card-image {
-  width: 440px;
+  width: 27.5rem;
 }
 
 .blog-card-title {
   margin: auto;
   text-align: left;
-  margin-top: 240px;
-  padding: 0 30px;
-  font-size: 24px;
+  margin-top: 15rem;
+  padding: 0 1.875rem;
+  font-size: 1.5rem;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -42,11 +42,11 @@
 }
 .blog-card-subtitle {
   text-align: justify;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 12px;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
+  font-size: 0.75rem;
   color: #c8c8c8;
-  line-height: 18px;
+  line-height: 1.125rem;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -56,23 +56,23 @@
 .button {
   background-color: #a066fb;
   color: white;
-  width: 90px;
-  padding: 10px 18px;
+  width: 5.625rem;
+  padding: 0.625rem 1.125rem;
   border-radius: 3px;
   text-align: center;
   text-decoration: none;
   display: block;
-  margin-top: 20px;
-  margin-left: 30px;
-  margin-right: 70px;
-  font-size: 14px;
+  margin-top: 1.25rem;
+  margin-left: 1.875rem;
+  margin-right: 4.375rem;
+  font-size: 0.875rem;
   cursor: pointer;
 }
 
 /* Media Query */
 @media (max-width: 1380px) {
   .card-title {
-    font-size: 25px;
+    font-size: 1.563rem;
   }
 }
 @media (max-width: 768px) {
@@ -81,7 +81,7 @@
     position: relative;
   }
   .blog-card-title {
-    margin-top: 10px;
+    margin-top: 0.625rem;
   }
   .blog-card-image {
     width: 100%;
@@ -90,6 +90,6 @@
   .square {
     width: 100%;
     height: auto;
-    padding-bottom: 30px;
+    padding-bottom: 1.875rem;
   }
 }
