--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -5,18 +5,18 @@
   font-weight: 500;
   line-height: 1.1;
   width: max-content;
-  padding: 13px 22px;
+  padding: 0.8125rem 1.375rem;
   margin-right: 0px;
   /* text-transform: uppercase; */
-  border-radius: 6px;
+  border-radius: 0.375rem;
   text-align: center;
   text-decoration: none;
   font-family: "Google Sans Regular";
   display: block;
-  margin-top: 20px;
-  font-size: 18px;
+  margin-top: 1.25rem;
+  font-size: 1.125rem;
   cursor: pointer;
-  letter-spacing: 2px;
+  letter-spacing: 0.125rem;
 }
 .main-button:hover {
   /* background-color: #ffffff; */
@@ -26,18 +26,18 @@
 .project-button {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 /* Media Query */
 @media (max-width: 768px) {
   .main-button {
-    font-size: 15px;
-    padding: 12px 18px;
+    font-size: 0.9375rem;
+    padding: 0.75rem 1.125rem;
     margin-right: 0px;
   }
 }
 @media (max-width: 320px) {
   .main-button {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
