--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -1,13 +1,13 @@
 .experience-card {
   width: 100%;
-  margin-bottom: 20px;
-  border-radius: 10px;
+  margin-bottom: 1.25rem;
+  border-radius: 0.625rem;
   display: flex;
   flex-direction: row;
 }
 
 .experience-card-logo-div {
-  margin: 10px;
+  margin: 0.625rem;
 }
 
 .experience-card-body-div {
@@ -20,44 +20,47 @@
 }
 
 .experience-card-logo {
-  width: 70px;
+  width: 4.375rem;
 }
 
 .experience-card-title {
   font-family: "Google Sans Regular";
-  margin-top: 10px;
+  margin-top: 0.625rem;
   margin-bottom: 2px;
   margin-left: 0px;
   margin-right: 7px;
   text-align: left;
+  font-size: 1.1rem;
 }
 
 .experience-card-company {
   font-family: "Google Sans Regular";
   margin: 0;
   text-align: left;
+  font-size: 1rem;
 }
 
 .experience-card-duration {
   font-family: "Google Sans Regular";
-  margin-top: 10px;
+  margin-top: 0.625rem;
   margin-bottom: 2px;
   margin-left: 0px;
   margin-right: 0px;
   text-align: right;
-  color: #868e96;
+  color: #333;
+  font-size: 1rem;
 }
 
 .experience-card-heading-left {
   float: left;
-  margin-left: 10px;
+  margin-left: 0.625rem;
   margin-right: auto;
 }
 
 .experience-card-heading-right {
   float: right;
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 
 .experience-card-location {
@@ -69,10 +72,11 @@
 
 .experience-card-description {
   margin-top: 5px;
-  margin-left: 10px;
-  text-align: justify;
-  margin-right: 20px;
+  margin-left: 0.625rem;
+  margin-right: 1.25rem;
   font-family: "Google Sans Regular";
+  font-size: 1rem;
+  text-align: left;
 }
 
 .experience-card-company > a {
@@ -108,13 +112,13 @@
 
 @media (max-width: 768px) {
   .experience-card {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
     flex-direction: column;
     text-align: center;
   }
 
   .experience-card-logo {
-    width: 100px;
+    width: 6.25rem;
   }
 
   .experience-card-body-div {
@@ -155,8 +159,7 @@
   }
 
   .experience-card-description {
-    margin-left: 14px;
-    margin-right: 14px;
-    text-align: justify;
+    margin-left: 0.875rem;
+    margin-right: 0.875rem;
   }
 }
