--- a/src/components/footer/ToggleSwitch.scss
+++ b/src/components/footer/ToggleSwitch.scss
@@ -11,15 +11,15 @@ $breakpoint-tablet: 768px;
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: 60px;
-  height: 30px;
+  width: 3.75rem;
+  height: 1.875rem;
   background: grey;
-  border-radius: 80px;
+  border-radius: 5rem;
   position: relative;
   transition: background-color 0.2s;
   @media screen and (max-width: $breakpoint-tablet) {
-    width: 50px;
-    height: 26px;
+    width: 3.125rem;
+    height: 1.625rem;
   }
 }
 
@@ -28,15 +28,15 @@ $breakpoint-tablet: 768px;
   position: absolute;
   top: 2px;
   left: 2px;
-  width: 26px;
-  height: 26px;
-  border-radius: 26px;
+  width: 1.625rem;
+  height: 1.625rem;
+  border-radius: 1.625rem;
   transition: 0.2s;
   background: #fff;
   box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
   @media screen and (max-width: $breakpoint-tablet) {
-    width: 22px;
-    height: 22px;
+    width: 1.375rem;
+    height: 1.375rem;
   }
 }
 
@@ -46,5 +46,5 @@ $breakpoint-tablet: 768px;
 }
 
 .react-switch-label:active .react-switch-button {
-  width: 40px;
+  width: 2.5rem;
 }
