--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -1,19 +1,19 @@
 .repo-card-div {
   color: rgb(88, 96, 105);
   background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 0.625rem 1.875rem -0.9375rem;
   padding: 2rem;
   cursor: pointer;
 }
 .repo-card-div:hover {
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px -10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1.25rem 1.875rem -0.625rem;
 }
 
 .repo-stats {
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
-  font-size: 13px;
+  font-size: 1rem;
   color: rgb(106, 115, 125);
 }
 
@@ -24,8 +24,8 @@
 }
 
 .language-color {
-  width: 10px;
-  height: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: blue;
   margin-right: 0.25rem;
   border-radius: 100%;
@@ -45,7 +45,7 @@
 
 .repo-svg {
   margin-right: 0.5rem;
-  min-width: 16px;
+  min-width: 1rem;
 }
 
 .repo-name {
@@ -54,7 +54,7 @@
   color: rgb(36, 41, 46);
   font-family: "Google Sans Regular";
   margin-bottom: 0.75rem;
-  font-size: 25px;
+  font-size: 1.5625rem;
   font-weight: 700;
   letter-spacing: -0.5px;
   overflow: hidden;
@@ -96,11 +96,11 @@
 
 @media (max-width: 768px) {
   .repo-name {
-    font-size: 16px;
+    font-size: 1.1rem;
   }
 
   .repo-description {
-    font-size: 14px;
+    font-size: 1rem;
   }
 
   .repo-details {
@@ -108,6 +108,6 @@
   }
 
   .repo-creation-date {
-    font-size: 14px;
+    font-size: 1rem;
   }
 }
