--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,7 @@
 .header {
   display: block;
   max-width: 90%;
-  padding: 20px 10px;
+  padding: 1.25rem 0.625rem;
   margin: 0px auto;
 }
 
@@ -20,7 +20,7 @@
 
 .header li a {
   display: block;
-  padding: 20px 20px;
+  padding: 1.25rem 1.25rem;
   /* color: black; */
   text-decoration: none;
 }
@@ -35,13 +35,13 @@
   float: left;
   font-size: 1.5em;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 0.625rem;
   line-height: normal;
 }
 .header .logo-name {
   font-family: "Agustina Regular";
   font-weight: bold;
-  padding: 0 10px;
+  padding: 0 0.625rem;
   /* color: #55198b; */
 }
 
@@ -63,7 +63,7 @@
   cursor: pointer;
   display: inline-block;
   float: right;
-  padding: 28px 20px;
+  padding: 1.75rem 1.25rem;
   position: relative;
   user-select: none;
 }
@@ -74,7 +74,7 @@
   height: 2px;
   position: relative;
   transition: background 0.2s ease-out;
-  width: 18px;
+  width: 1.125rem;
 }
 
 .header .menu-icon .navicon:before,
@@ -103,7 +103,7 @@
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 370px;
+  max-height: 23.125rem;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -143,6 +143,6 @@
 }
 @media (max-width: 960px) and (min-width: 768px) {
   .header {
-    font-size: 12px;
+    font-size: 1rem;
   }
 }
