--- a/src/components/issueCard/IssueCard.css
+++ b/src/components/issueCard/IssueCard.css
@@ -3,9 +3,9 @@
   display: inline-block;
   /* margin-left: 12.5%;
     margin-right: 12.5%; */
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   border-radius: 5px;
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 .issue-top {
@@ -23,7 +23,7 @@
   margin-top: 0px;
   display: inline-block;
   margin-bottom: 0px;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-family: "Google Sans Regular";
   padding: 2px;
   color: #fff;
@@ -34,8 +34,8 @@
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-left: 10px;
-  font-size: 12px;
+  margin-left: 0.625rem;
+  font-size: 0.75rem;
   font-family: "Google Sans Regular";
 }
 
@@ -46,7 +46,7 @@
 }
 
 .issue-icons {
-  font-size: 18px;
+  font-size: 1.125rem;
   width: 5%;
   float: left;
   text-align: left;
@@ -61,7 +61,7 @@
 .issue-subtitle {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-size: 10px;
+  font-size: 1rem;
   font-family: "Google Sans Regular";
   color: #808080;
 }
@@ -73,7 +73,7 @@
   text-align: left;
   margin-top: 0px;
   margin-bottom: 0px;
-  font-size: 16px;
+  font-size: 1.1rem;
   font-family: "Google Sans Regular";
 }
 
@@ -128,7 +128,7 @@
   margin-top: 0px;
   margin-bottom: 0px;
   font-family: "Google Sans Regular";
-  font-size: 12px;
+  font-size: 1rem;
   margin-top: 5px;
 }
 
@@ -147,16 +147,16 @@
   margin-top: 0px;
   margin-bottom: 0px;
   color: #28a745;
-  font-size: 14px;
+  font-size: 1rem;
   font-family: "Google Sans Regular";
 }
 
 .deletions-files {
-  margin-left: 8px;
+  margin-left: 0.5rem;
   margin-top: 0px;
   margin-bottom: 0px;
   color: #d73a49;
-  font-size: 14px;
+  font-size: 1rem;
   font-family: "Google Sans Regular";
 }
 
@@ -168,13 +168,13 @@
 .owner-img {
   display: inline-block;
   width: auto;
-  height: 40px;
+  height: 2.5rem;
 }
 
 .assigned-to-img {
   display: inline-block;
-  margin-left: 10px;
-  height: 20px;
+  margin-left: 0.625rem;
+  height: 1.25rem;
   width: auto;
 }
 
@@ -207,8 +207,8 @@
   }
 
   .files-changed-header {
-    margin-top: 10px;
-    margin-left: 5px;
+    margin-top: 0.625rem;
+    margin-left: 0.3125rem;
     width: 100%;
     text-align: left;
   }
@@ -219,7 +219,7 @@
 
   .issue-icons {
     width: 7%;
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .issue-title-header {
@@ -229,10 +229,10 @@
   .issue-title {
     white-space: normal;
     overflow: hidden;
-    font-size: 15px;
+    font-size: 1.2rem;
   }
   .pr-subtitile {
-    font-size: 12px;
+    font-size: 1rem;
     margin-top: 3px;
   }
 
