--- a/src/components/issueChart/IssueChart.css
+++ b/src/components/issueChart/IssueChart.css
@@ -1,8 +1,8 @@
 .issue-chart {
   width: 100%;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .issue-chart-header {
@@ -14,6 +14,6 @@
 
 @media (max-width: 768px) {
   .issue-chart-header {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
