--- a/src/components/projectLanguages/ProjectLanguages.css
+++ b/src/components/projectLanguages/ProjectLanguages.css
@@ -9,14 +9,14 @@
 
 .software-skill-inline-languages {
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   margin-bottom: 0px;
   font-family: "Google Sans Regular";
 }
 
 @media (max-width: 768px) {
   .software-skill-inline-languages {
-    margin-right: 10px;
+    margin-right: 0.625rem;
     margin-bottom: 0px;
   }
 }
