--- a/src/components/pullRequestChart/PullRequestChart.css
+++ b/src/components/pullRequestChart/PullRequestChart.css
@@ -1,8 +1,8 @@
 .pr-chart {
   width: 100%;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 canvas {
@@ -15,6 +15,6 @@ canvas {
 
 @media (max-width: 768px) {
   .pr-chart-header {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
