--- a/src/components/talkCard/TalkCard.css
+++ b/src/components/talkCard/TalkCard.css
@@ -6,14 +6,14 @@
 /* Rectangle Card Layout */
 .rectangle {
   background: url(..\..\assests\images\talksCardBack.svg);
-  width: 380px;
-  height: 300px;
+  width: 23.75rem;
+  height: 18.75rem;
   border-radius: 4px;
   box-shadow: 0px 20px 50px #d9dbdf;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  margin-top: 50px;
+  margin-top: 3.125rem;
 }
 .rectangle:hover {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
@@ -30,9 +30,9 @@
   color: white;
   margin: auto;
   text-align: left;
-  margin-top: 25px;
-  padding: 0px 0px 40px 30px;
-  font-size: 30px;
+  margin-top: 1.5625rem;
+  padding: 0px 0px 2.5rem 1.875rem;
+  font-size: 1.875rem;
   line-height: normal;
   overflow: hidden;
   display: -webkit-box;
@@ -40,13 +40,13 @@
   -webkit-box-orient: vertical;
 }
 .talk-card-subtitle {
-  margin-top: 35px;
+  margin-top: 2.1875rem;
   text-align: justify;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 16px;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
+  font-size: 1rem;
   color: #7f8287;
-  line-height: 18px;
+  line-height: 1.125rem;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -55,14 +55,14 @@
 .talk-button {
   background-color: #a066fb;
   color: white;
-  width: 90px;
-  padding: 10px 18px;
+  width: 5.625rem;
+  padding: 0.625rem 1.125rem;
   border-radius: 3px;
   text-align: center;
   text-decoration: none;
   display: block;
-  margin-top: 20px;
-  font-size: 14px;
+  margin-top: 1.25rem;
+  font-size: 1rem;
   cursor: pointer;
 }
 .card-footer-button-div {
@@ -73,7 +73,7 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .card-title {
-    font-size: 25px;
+    font-size: 1.5625rem;
   }
 }
 @media (max-width: 768px) {
@@ -82,7 +82,7 @@
     position: relative;
   }
   .talk-card-title {
-    margin-top: 30px;
+    margin-top: 1.875rem;
   }
   .talk-card-image {
     width: 100%;
@@ -91,6 +91,6 @@
   .square {
     width: 100%;
     height: auto;
-    padding-bottom: 30px;
+    padding-bottom: 1.875rem;
   }
 }
