--- a/src/components/topButton/TopButton.css
+++ b/src/components/topButton/TopButton.css
@@ -4,8 +4,13 @@
   bottom: 1.2rem;
   right: 1.5rem;
   cursor: pointer;
-  padding: 15px;
+  padding: 0;
   outline: none;
   border-radius: 2rem;
   font-size: 1.5rem;
+  width: 3rem;
+  height: 3rem;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
