--- a/src/containers/blogs/Blog.css
+++ b/src/containers/blogs/Blog.css
@@ -1,14 +1,14 @@
 /*Blog Cards Layout*/
 .square {
-  width: 440px;
-  height: 430px;
+  width: 27.5rem;
+  height: 26.875rem;
   background: white;
   border-radius: 4px;
   box-shadow: 0px 20px 50px #d9dbdf;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .square:hover {
@@ -16,7 +16,7 @@
 }
 
 .blog-header-text {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
 }
 
@@ -25,7 +25,7 @@
 }
 .blog-main-div > * {
   flex: 1;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 .blog-main-div {
   display: flex;
@@ -43,16 +43,16 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .blog-header-text {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 768px) {
   .blog-header-text {
-    font-size: 30px;
+    font-size: 1.875rem;
     text-align: center;
   }
   .blog-subtitle {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: normal;
     text-align: center;
   }
