--- a/src/containers/certifications/Certifications.css
+++ b/src/containers/certifications/Certifications.css
@@ -1,5 +1,5 @@
 .certs-header {
-  font-size: 40px;
+  font-size: 2.5rem;
   line-height: 1.1;
   font-family: "Google Sans Regular";
   text-align: center;
@@ -13,7 +13,7 @@
 
 @media (max-width: 1380px) {
   .certs-header {
-    font-size: 35px;
+    font-size: 2.1875rem;
   }
 }
 
@@ -23,6 +23,6 @@
   }
 
   .certs-header {
-    font-size: 30px;
+    font-size: 1.875rem;
   }
 }
