--- a/src/containers/contact/Contact.css
+++ b/src/containers/contact/Contact.css
@@ -7,14 +7,14 @@
 }
 
 .contact-title {
-  font-size: 65px;
+  font-size: 4.0625rem;
   font-weight: 400;
 }
 
 .contact-detail,
 .contact-detail-email {
-  margin-top: 20px;
-  font-size: 40px;
+  margin-top: 1.25rem;
+  font-size: 2.5rem;
   font-weight: 400;
   color: #868e96;
   text-decoration: none;
@@ -49,18 +49,18 @@
 /* Media Query */
 @media (max-width: 1380px), (max-width: 768px) {
   .contact-title {
-    font-size: 56px;
+    font-size: 3.5rem;
     font-weight: 400;
     text-align: center;
   }
 
   .contact-title {
-    font-size: 40px;
+    font-size: 2.5rem;
     text-align: center;
   }
 
   .contact-subtitle {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: normal;
     text-align: center;
   }
@@ -72,7 +72,7 @@
 
   .contact-detail,
   .contact-detail-email {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .contact-image-div {
