--- a/src/containers/education/Educations.css
+++ b/src/containers/education/Educations.css
@@ -1,5 +1,5 @@
 .educations-header {
-  font-size: 40px;
+  font-size: 2.5rem;
   line-height: 1.1;
   font-family: "Google Sans Regular";
   text-align: center;
@@ -7,12 +7,12 @@
 
 @media (max-width: 1380px) {
   .educations-header {
-    font-size: 35px;
+    font-size: 2.1875rem;
   }
 }
 
 @media (max-width: 768px) {
   .educations-header {
-    font-size: 30px;
+    font-size: 1.875rem;
   }
 }
