--- a/src/containers/experienceAccordion/ExperienceAccordion.css
+++ b/src/containers/experienceAccordion/ExperienceAccordion.css
@@ -1,13 +1,33 @@
-.experience-accord {
-  margin: 50px;
+#experience-accord {
+  margin: 1rem auto;
+  max-width: 50rem;
 }
 
 .accord-panel {
   font-family: "Google Sans Regular";
 }
 
+#experience-accord div[role="button"] {
+  font-size: 1.3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+#experience-accord div:nth-of-type(2) {
+  /* padding: 1rem; */
+}
+
 @media (max-width: 768px) {
-  .experience-accord {
-    margin: 20px;
+  #experience-accord {
+    margin: 1rem;
+  }
+  #experience-accord div[role="button"] {
+    font-size: 1.2rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  #experience-accord div:nth-of-type(2) {
+    padding: 0rem;
   }
 }
