--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -1,19 +1,19 @@
 .main {
   width: 90%;
-  padding: 20px 10px;
+  padding: 1.25rem 0.625rem;
   margin: 0px auto;
   margin-top: 4rem;
 }
 .greet-main {
   width: 90%;
-  padding: 20px 10px;
+  padding: 1.25rem 0.625rem;
   margin: 0px auto;
   margin-top: 2rem;
 }
 
 .gretting-main {
   width: 90%;
-  padding: 20px 10px;
+  padding: 1.25rem 0.625rem;
   margin: 0px auto;
 }
 
@@ -23,22 +23,22 @@
 
 .greeting-main > * {
   flex: 1;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 .button-greeting-div {
   display: flex;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .greeting-text {
-  margin-top: 80px;
-  font-size: 70px;
+  margin-top: 5rem;
+  font-size: 4.375rem;
   line-height: 1.1;
   font-family: "Google Sans Bold";
 }
 
 .greeting-nickname {
-  font-size: 30px;
+  font-size: 1.875rem;
   line-height: 0px;
   font-family: "Google Sans Bold Italic";
 }
@@ -58,10 +58,10 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .greeting-text {
-    font-size: 50px;
+    font-size: 3.125rem;
   }
   .greeting-text-p {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
 @media (max-width: 768px) {
@@ -69,16 +69,16 @@
     justify-content: space-around;
   }
   .greeting-text {
-    font-size: 30px;
+    font-size: 1.875rem;
     margin-top: 0px;
     text-align: center;
   }
   .greeting-nickname {
-    font-size: 25px;
+    font-size: 1.5625rem;
     text-align: center;
   }
   .greeting-text-p {
-    font-size: 16px;
+    font-size: 1rem;
     margin-right: 0px;
     line-height: normal;
     text-align: center;
