--- a/src/containers/organizations/Organizations.css
+++ b/src/containers/organizations/Organizations.css
@@ -1,20 +1,20 @@
 .organizations-header {
-  font-size: 40px;
+  font-size: 2.5rem;
   line-height: 1.1;
   font-family: "Google Sans Regular";
   text-align: center;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
 }
 
 @media (max-width: 1380px) {
   .organizations-header {
-    font-size: 35px;
+    font-size: 2.1875rem;
   }
 }
 
 @media (max-width: 768px) {
   .organizations-header {
-    font-size: 25px;
+    font-size: 1.5625rem;
   }
 }
