--- a/src/containers/podcast/Podcast.css
+++ b/src/containers/podcast/Podcast.css
@@ -1,11 +1,11 @@
 .podcast-header-title {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   line-height: 0px;
 }
 
 .podcast {
-  width: 600px;
+  width: 37.5rem;
 }
 
 .podcast-main-div {
@@ -15,17 +15,17 @@
 }
 @media (max-width: 768px) {
   .podcast-header-title {
-    font-size: 30px;
+    font-size: 1.875rem;
     text-align: center;
   }
   .podcast-header-subtitle {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: normal;
     text-align: center;
   }
 
   .podcast {
-    width: 300px;
+    width: 18.75rem;
   }
   .podcast-main-div {
     text-align: center;
