--- a/src/containers/projects/Project.css
+++ b/src/containers/projects/Project.css
@@ -1,5 +1,5 @@
 .project-title {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   line-height: normal;
 }
@@ -18,12 +18,12 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .project-title {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 768px) {
   .project-title {
-    font-size: 30px;
+    font-size: 1.875rem;
     text-align: center;
   }
   .repo-cards-div-main {
