--- a/src/containers/talks/Talks.css
+++ b/src/containers/talks/Talks.css
@@ -1,16 +1,16 @@
 .talk-header-title {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   line-height: 0px;
 }
 
 @media (max-width: 768px) {
   .talk-header-title {
-    font-size: 30px;
+    font-size: 1.875rem;
     text-align: center;
   }
   .talk-header-subtitle {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: normal;
     text-align: center;
   }
