--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -17,7 +17,7 @@
 
 .address-heading-div {
   display: flex;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 
 .blog-heading-div > * {
@@ -65,45 +65,45 @@
 }
 
 .contact-heading-text {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   font-family: "Google Sans Medium";
   line-height: 1.1;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 3.75rem;
 }
 
 .blog-heading-text {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   font-family: "Google Sans Medium";
   line-height: 1.1;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 2.5rem;
 }
 
 .address-heading-text {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-family: "Google Sans Regular";
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .contact-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
   font-family: "Google Sans Medium";
 }
 
 .blog-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
   font-family: "Google Sans Medium";
 }
 
@@ -128,47 +128,47 @@
 
 @media (max-width: 1380px) {
   .contact-heading-text {
-    font-size: 50px;
-    margin-top: 60px;
+    font-size: 3.125rem;
+    margin-top: 3.75rem;
   }
 
   .blog-heading-text {
-    font-size: 50px;
-    margin-top: 40px;
+    font-size: 3.125rem;
+    margin-top: 2.5rem;
   }
 }
 
 @media (max-width: 768px) {
   .contact-heading-text {
-    font-size: 30px;
+    font-size: 1.875rem;
     margin-top: 0px;
   }
 
   .blog-heading-text {
-    font-size: 30px;
+    font-size: 1.875rem;
     margin-top: 0px;
   }
 
   .address-heading-text {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .blog-heading-div {
     flex-direction: column-reverse;
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   .address-heading-div {
     flex-direction: column;
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   .blog-heading-text-div {
-    margin-top: 40px;
+    margin-top: 2.5rem;
   }
 
   .address-heading-text-div {
-    margin-top: 40px;
+    margin-top: 2.5rem;
   }
 
   .contact-heading-div {
@@ -176,7 +176,7 @@
   }
 
   .contact-header-detail-text {
-    font-size: 16px;
+    font-size: 1rem;
     margin-left: 0px;
     margin-right: 0px;
     line-height: normal;
@@ -184,7 +184,7 @@
   }
 
   .blog-header-detail-text {
-    font-size: 16px;
+    font-size: 1rem;
     margin-left: 0px;
     margin-right: 0px;
     line-height: normal;
