--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -30,48 +30,48 @@
 }
 
 .experience-heading-text {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   font-family: "Google Sans Medium";
   line-height: 1.1;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 
 .experience-heading-sub-text {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-family: "Google Sans Regular";
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .experience-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
   font-family: "Google Sans Medium";
 }
 
 @media (max-width: 1380px) {
   .experience-heading-text {
-    font-size: 50px;
-    margin-top: 80px;
+    font-size: 3.125rem;
+    margin-top: 5rem;
   }
   .experience-heading-sub-text {
-    font-size: 25px;
+    font-size: 1.5625rem;
   }
 }
 
 @media (max-width: 768px) {
   .experience-heading-text {
-    font-size: 30px;
-    margin-top: 20px;
+    font-size: 1.875rem;
+    margin-top: 1.25rem;
   }
 
   .experience-heading-sub-text {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .experience-heading-div {
@@ -79,9 +79,9 @@
   }
 
   .experience-header-detail-text {
-    font-size: 16px;
+    font-size: 1rem;
     margin-right: 0px;
     line-height: normal;
-    text-align: center;
+    text-align: left;
   }
 }
