--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -31,27 +31,27 @@
 }
 
 .projects-heading-text {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 400;
   font-family: "Google Sans Medium";
   line-height: 1.1;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 
 .projects-heading-sub-text {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-family: "Google Sans Regular";
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .projects-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
   font-family: "Google Sans Medium";
 }
 
@@ -59,29 +59,29 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1rem 1rem;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-top: 60px;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+  margin-top: 3.75rem;
 }
 
 @media (max-width: 1380px) {
   .projects-heading-text {
-    font-size: 50px;
-    margin-top: 80px;
+    font-size: 3.125rem;
+    margin-top: 5rem;
   }
   .projects-heading-sub-text {
-    font-size: 25px;
+    font-size: 1.5625rem;
   }
 }
 
 @media (max-width: 768px) {
   .projects-heading-text {
-    font-size: 30px;
-    margin-top: 20px;
+    font-size: 1.875rem;
+    margin-top: 1.25rem;
   }
 
   .projects-heading-sub-text {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .projects-heading-div {
@@ -89,7 +89,7 @@
   }
 
   .projects-header-detail-text {
-    font-size: 16px;
+    font-size: 1rem;
     margin-right: 0px;
     margin-left: 0px;
     line-height: normal;
@@ -98,8 +98,8 @@
 
   .repo-cards-div-main {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 30px;
+    margin-left: 0.625rem;
+    margin-right: 0.625rem;
+    margin-top: 1.875rem;
   }
 }
