--- a/src/components/softwareSkills/SoftwareSkill.css
+++ b/src/components/softwareSkills/SoftwareSkill.css
@@ -9,8 +9,7 @@
 
 .software-skill-inline {
   display: inline-block;
-  margin-right: 1.25rem;
-  margin-bottom: 1.25rem;
+  margin: 0.5rem;
   font-family: "Google Sans Regular";
 }
 
