--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -51,7 +51,7 @@
 }
 @media (max-width: 768px) {
   .skills-heading {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     text-align: center;
   }
   .skills-header {
@@ -66,7 +66,7 @@
   }
   .skills-text-div {
     margin-left: 0px;
-    margin: 1.25rem;
+    margin: 0;
   }
   .skills-text {
     font-size: 1rem;
